# etf-strategy-tracker

./: .gitignore  AGENTS.md  README.md  config.example.json  index.html  pyproject.toml  report.json  requirements.txt
.github/workflows/: daily-report.yml
cloudflare-worker/: README.md  worker.js  wrangler.toml.example
data/: sample_trades.csv
docs/: index.html
docs/product-requirements/: strategy-test-report-delivery.md  strategy-test-report-prd.md
scripts/: create_google_form.gs  generate_strategy_test_report.mjs  strategy_test_mapping.json
src/etf_tracker/: __init__.py  cli.py  config.py  crypto.py  indicators.py  market.py  models.py  portfolio.py  report.py  strategy.py  trades.py  valuation.py
test-reports/: strategy-test-report.html
tests/: strategy_report_generator.test.mjs  test_accounting.py  test_indicators.py  test_market.py  test_phase_three_strategy.py  test_phase_two_strategy.py  test_report.py  test_strategy.py  test_trades.py  worker.test.mjs
