[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "etf-strategy-tracker"
version = "0.1.0"
description = "Encrypted GitHub Pages daily ETF strategy tracker"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

